--- a/applicationn/templates/base.html
+++ b/applicationn/templates/base.html
@@ -22,6 +22,14 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbar">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" id="home" href="/">Home</a>
+              <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+              <a class="nav-item nav-link" id="login" href="/login">Login</a>
+              <a class="nav-item nav-link" id="signUp" href="/sign-up">SignUp</a>
+            </div>
+          </div>
     </nav>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
