--- a/applicationn/templates/base.html
+++ b/applicationn/templates/base.html
@@ -30,7 +30,8 @@
               <a class="nav-item nav-link" id="signUp" href="/sign-up">SignUp</a>
             </div>
           </div>
-    </nav>
+    </nav> 
+    <div class="container">{% block content %} {% endblock %}</div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
