--- a/applicationn/templates/home.html
+++ b/applicationn/templates/home.html
@@ -1,1 +1,4 @@
-{% extends "base.html" %} {% block title %}changed{% endblock %}
+{% extends "base.html" %} {% block title %}Home{% endblock %}
+{% block content %}
+<h1>this is home page </h1>
+{% endblock %}
